branding: Corrects problematic cert entry when not using monspaced font and having content wrap.
Closes #42.

Ensures that when users enter certs into the FR web interface for creating/updating IdP/SP that
the certificate data uses a monospaced font (courier) and does not wrap (reduced font size).

--- a/branding/web-app/css/application.css
+++ b/branding/web-app/css/application.css
@@ -86,7 +86,12 @@ td.centered, th.centered, .centered {
 }
 
 .cert {
-  width: 500px;
+  width: 550px;
+}
+
+textarea.cert{
+  font: courier;
+  font-size: 10px;
 }
 
 .metadata {
